# claude-memory-bridge

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: plugin.json
commands/: health.md  import.md  namespaces.md  promote.md  search.md  sync.md
scripts/: install.py  setup_demo.py
skills/memory-management/: SKILL.md
src/memory_bridge/: __init__.py  __main__.py  config.py  models.py  server.py
src/memory_bridge/engine/: __init__.py  health_analyzer.py  namespace_manager.py  promoter.py  retriever.py
src/memory_bridge/store/: __init__.py  base.py  filesystem.py
