[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-memory-bridge"
version = "0.1.0"
description = "Cross-project memory sharing for Claude Code and Cowork. Namespaces let projects share knowledge without polluting global scope."
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "LewenW", email = "lwwang713@gmail.com" }]
readme = "README.md"
keywords = ["claude", "claude-code", "cowork", "mcp", "memory", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://github.com/LewenW/claude-memory-bridge"
Repository = "https://github.com/LewenW/claude-memory-bridge"
Issues = "https://github.com/LewenW/claude-memory-bridge/issues"

[project.scripts]
memory-bridge = "memory_bridge.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_bridge"]
